<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/test4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:orientation="horizontal">

    </LinearLayout>

    <EditText
        android:id="@+id/window2"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="text|number"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textColorLink="@color/colorText"
        app:layout_constraintStart_toEndOf="@+id/text2"
        app:layout_constraintTop_toBottomOf="@+id/window5"
        android:autofillHints="" />

    <EditText
        android:id="@+id/window1"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="9dp"
        android:autofillHints=""
        android:contentDescription="@string/just_a_window_for_amount_of_money"
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="text|number"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textColorLink="@color/colorText"
        app:layout_constraintStart_toEndOf="@+id/text1"
        app:layout_constraintTop_toBottomOf="@+id/window2" />

    <EditText
        android:id="@+id/windowcoins"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="7dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/coins"
        android:inputType="text|number"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textColorLink="@color/colorText"
        app:layout_constraintStart_toEndOf="@+id/imgCoins"
        app:layout_constraintTop_toBottomOf="@+id/window1" />

    <EditText
        android:id="@+id/windowvisa"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/just_a_window_for_amount_of_money"
        android:ems="10"
        android:hint="@string/visa"
        android:inputType="text|number"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textColorLink="@color/colorText"
        app:layout_constraintStart_toEndOf="@+id/imgVisaWindow"
        app:layout_constraintTop_toBottomOf="@+id/windowcoins"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/windowcheque"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/just_a_window_for_amount_of_money"
        android:ems="10"
        android:hint="@string/cheque"
        android:inputType="text|number"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textColorLink="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/windowvisa"
        android:autofillHints="" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="7dp"
        android:text="@string/_1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/windowcoins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <TextView
        android:id="@+id/imgCoins"
        android:layout_width="42dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/cents"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/windowcoins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <TextView
        android:id="@+id/imgCash"
        android:layout_width="42dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/cash"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/cashtotal"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/window5"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalculate" />

    <TextView
        android:id="@+id/imgVisaWindow"
        android:layout_width="63dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/visa"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/windowvisa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCoins" />

    <TextView
        android:id="@+id/imgVisaTotal"
        android:layout_width="57dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/visa"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/visatotal"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/window2"
        app:layout_constraintTop_toBottomOf="@+id/imgCash" />

    <TextView
        android:id="@+id/imgTotalMoney"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/totalmoneyicon"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/total"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/window2"
        app:layout_constraintTop_toBottomOf="@+id/imgVisaTotal" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/_2"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/window2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text5" />

    <EditText
        android:id="@+id/window5"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/just_a_window_for_amount_of_money"
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="text|number"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textColorLink="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/window2"
        app:layout_constraintStart_toEndOf="@+id/text5"
        app:layout_constraintTop_toBottomOf="@+id/window10"
        android:autofillHints="" />

    <TextView
        android:id="@+id/text10"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="12dp"
        android:text="@string/_10"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/text5"
        app:layout_constraintEnd_toStartOf="@+id/window10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text20" />

    <EditText
        android:id="@+id/window10"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="text|number"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textColorLink="@color/colorText"
        app:layout_constraintStart_toEndOf="@+id/text10"
        app:layout_constraintTop_toBottomOf="@+id/window20"
        android:autofillHints="" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/_5"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/window5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text10" />

    <TextView
        android:id="@+id/text50"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_50"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/text20"
        app:layout_constraintEnd_toStartOf="@+id/window50"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text20"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:text="@string/_20"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/window20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text50" />

    <EditText
        android:id="@+id/window50"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="text|number"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textColorLink="@color/colorText"
        app:layout_constraintStart_toEndOf="@+id/text50"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/viewregister"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorWindows"
        android:ems="10"
        android:hint="@string/view_register"
        android:inputType="text|number"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textColorLink="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/window20"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="11dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="text|number"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textColorLink="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/window10"
        app:layout_constraintStart_toEndOf="@+id/text20"
        app:layout_constraintTop_toBottomOf="@+id/window50" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="119dp"
        android:layout_height="102dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total"
        android:layout_width="92dp"
        android:layout_height="25dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorWindows"
        android:hint="@string/total"
        android:textColor="@color/colorTotal"
        android:textColorHint="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visatotal" />

    <TextView
        android:id="@+id/cashtotal"
        android:layout_width="92dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorWindows"
        android:hint="@string/cash_total"
        android:textColor="@color/colorTotal"
        android:textColorHint="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalculate" />

    <TextView
        android:id="@+id/visatotal"
        android:layout_width="92dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorWindows"
        android:hint="@string/visa_total"
        android:textColor="@color/colorTotal"
        android:textColorHint="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cashtotal" />

</android.support.constraint.ConstraintLayout>