<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MenuActivity">

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:background="@drawable/test4"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/adritail">


        </FrameLayout>

        <FrameLayout
            android:id="@+id/FrameMiddle"
            android:layout_width="match_parent"
            android:layout_height="425dp">

            <TextView
                android:id="@+id/TextLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/welcome_guys"
                android:textColor="@color/colorText"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="16dp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/FrameButtons"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/LinearLayout02">

            <LinearLayout


                android:id="@+id/ButtonsLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">


                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/calculatethetill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/calculate_the_till"
                    android:textColor="@color/colorText"
                    app:backgroundTint="@color/colorOrange" />

                <Button
                    android:id="@+id/entries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/entries"
                    android:textColor="@color/colorText"
                    app:backgroundTint="@color/colorOrange" />

                <Button
                    android:id="@+id/contacts"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/contacts"
                    android:textColor="@color/colorText"
                    app:backgroundTint="@color/colorOrange" />
                tools:layout_editor_absoluteX="302dp"
                tools:layout_editor_absoluteY="8dp"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="102dp" />

            </LinearLayout>

        </FrameLayout>


        <FrameLayout
            android:id="@+id/FrameBottom"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="bottom"></FrameLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>